# UnnamedGameEngine

./: .gitignore  CMakeLists.txt  README.md
cmake/: pmm.cmake
example_games/banner/: materials.json  scenes.json
example_games/banner/scenes/: banner.json
framework/: CMakeLists.txt
framework/cmake/: CompilerWarnings.cmake
framework/include/framework/: glm_ostream.h  image.h  imguizmo.h  mesh.h  shader.h  variant_helper.h  window.h
framework/include/framework/entt/: entt.h
framework/include/framework/entt_imgui/: imgui_entt_entity_editor.hpp
framework/src/: .clang-format  image.cpp  imguizmo.cpp  mesh.cpp  shader.cpp  trackball.cpp  window.cpp
framework/src/ImGuizmo/: ImGuizmo.cpp  ImGuizmo.h
resources/: ApeSmall.mtl  ArmadilloSmall.mtl  controller.mtl
resources/adam/: Arms_001.mtl  Eye.mtl  Lens.mtl  antenaCap.mtl  smallEye.mtl
resources/env/: Arch.mtl  Area_002.mtl  Ground.mtl  Room.mtl
resources/lightwood/: Wood048_2K-PNG.usda  Wood048_2K-PNG.usdc
resources/marble/: Marble012_2K-PNG.usda  Marble012_2K-PNG.usdc
resources/marbleTiles/: Tiles012_2K-PNG.usda  Tiles012_2K-PNG.usdc
resources/robotarm/: Claw2.mtl
resources/wood/: WoodFloor051_2K-PNG.usda  WoodFloor051_2K-PNG.usdc
shaders/: debug_vert.glsl  pbr_frag.glsl  pbr_heightmapped_frag.glsl  pbr_heightmapped_textured_frag.glsl  pbr_oscilating_textured_frag.glsl  pbr_textured_frag.glsl  phong_frag.glsl  sdf_frag.glsl  shader_frag.glsl  shader_height_vert.glsl  shader_vert.glsl  shadow_debug_frag.glsl  shadow_vert.glsl  solid_color_frag.glsl  xtoon_frag.glsl
src/: AnimatedMesh.cpp  AnimatedMesh.h  Transform.cpp  Transform.h  application.cpp  camera.cpp  camera.h  mesh.cpp  mesh.h  texture.cpp  texture.h
src/components/: AnimComponents.h  Components.h  RobotArmComponents.h
src/lights/: Light.cpp  Light.h
src/managers/: MaterialManager.cpp  MaterialManager.h  SceneManager.cpp  SceneManager.h  ShaderManager.cpp  ShaderManager.h  TextureManager.cpp  TextureManager.h
src/materials/: Material.cpp  Material.h  MaterialManager.cpp  MaterialManager.h  ShaderManager.cpp  ShaderManager.h  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h
src/scene/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneManager.h
src/systems/: AnimationSystem.h  DebugSystem.h  RenderSystem.h  RobotArmSystem.h  WasdControllerSystem.h
